--- a/css/styles.css
+++ b/css/styles.css
@@ -649,7 +649,12 @@ padding: 10%;
         margin-right: 3%;
        
     }
-
+    #main-content p {
+        font-size: 1rem;
+    }
+    #main-content h3, #main-content h4, #main-content h5 {
+        font-size: 1.1rem;
+    }
 }
 
 .otherpages {
